feat(api): finalise keyword/description end points
Fixes #409
