# applications/osb-portal/src/apiclient/workspaces/apis/RestApi.ts
@@ -60,6 +60,12 @@ export interface GetContextsRequest {
     repositoryType: RepositoryType;
 }
 
+export interface GetMetadataRequest {
+    uri: string;
+    repositoryType: RepositoryType;
+    context: string;
+}
+
 export interface OsbrepositoryGetRequest {
     page?: number;
     perPage?: number;
@@ -327,13 +333,17 @@ export class RestApi extends runtime.BaseAPI {
     /**
      * Used to retrieve the description of a repository.
      */
-    async getDescriptionRaw(requestParameters: GetContextsRequest): Promise<runtime.ApiResponse<Array<string>>> {
+    async getDescriptionRaw(requestParameters: GetMetadataRequest): Promise<runtime.ApiResponse<string>> {
         if (requestParameters.uri === null || requestParameters.uri === undefined) {
-            throw new runtime.RequiredError('uri','Required parameter requestParameters.uri was null or undefined when calling getContexts.');
+            throw new runtime.RequiredError('uri','Required parameter requestParameters.uri was null or undefined when calling getDescription.');
         }
 
         if (requestParameters.repositoryType === null || requestParameters.repositoryType === undefined) {
-            throw new runtime.RequiredError('repositoryType','Required parameter requestParameters.repositoryType was null or undefined when calling getContexts.');
+            throw new runtime.RequiredError('repositoryType','Required parameter requestParameters.repositoryType was null or undefined when calling getDescription.');
+        }
+
+        if (requestParameters.context === null || requestParameters.context === undefined) {
+            throw new runtime.RequiredError('context','Required parameter requestParameters.context was null or undefined when calling getDescription.');
         }
 
         const queryParameters: any = {};
@@ -344,6 +354,10 @@ export class RestApi extends runtime.BaseAPI {
 
         if (requestParameters.repositoryType !== undefined) {
             queryParameters['repository_type'] = requestParameters.repositoryType;
+        }
+
+        if (requestParameters.context !== undefined) {
+            queryParameters['context'] = requestParameters.context;
         }
 
         const headerParameters: runtime.HTTPHeaders = {};
@@ -362,7 +376,7 @@ export class RestApi extends runtime.BaseAPI {
     /**
      * Used to retrieve description of a repository.
      */
-    async getDescription(requestParameters: GetContextsRequest): Promise<Array<string>> {
+    async getDescription(requestParameters: GetMetadataRequest): Promise<string> {
         const response = await this.getDescriptionRaw(requestParameters);
         return await response.value();
     }
@@ -370,13 +384,17 @@ export class RestApi extends runtime.BaseAPI {
     /**
      * Used to retrieve keywords for a repository.
      */
-    async getKeywordsRaw(requestParameters: GetContextsRequest): Promise<runtime.ApiResponse<Array<string>>> {
+    async getKeywordsRaw(requestParameters: GetMetadataRequest): Promise<runtime.ApiResponse<Array<string>>> {
         if (requestParameters.uri === null || requestParameters.uri === undefined) {
-            throw new runtime.RequiredError('uri','Required parameter requestParameters.uri was null or undefined when calling getContexts.');
+            throw new runtime.RequiredError('uri','Required parameter requestParameters.uri was null or undefined when calling getKeywords.');
         }
 
         if (requestParameters.repositoryType === null || requestParameters.repositoryType === undefined) {
-            throw new runtime.RequiredError('repositoryType','Required parameter requestParameters.repositoryType was null or undefined when calling getContexts.');
+            throw new runtime.RequiredError('repositoryType','Required parameter requestParameters.repositoryType was null or undefined when calling getKeywords.');
+        }
+
+        if (requestParameters.context === null || requestParameters.context === undefined) {
+            throw new runtime.RequiredError('context','Required parameter requestParameters.context was null or undefined when calling getKeywords.');
         }
 
         const queryParameters: any = {};
@@ -387,6 +405,10 @@ export class RestApi extends runtime.BaseAPI {
 
         if (requestParameters.repositoryType !== undefined) {
             queryParameters['repository_type'] = requestParameters.repositoryType;
+        }
+
+        if (requestParameters.context !== undefined) {
+            queryParameters['context'] = requestParameters.context;
         }
 
         const headerParameters: runtime.HTTPHeaders = {};
@@ -405,11 +427,10 @@ export class RestApi extends runtime.BaseAPI {
     /**
      * Used to retrieve keywords/topics of a repository.
      */
-    async getKeywords(requestParameters: GetContextsRequest): Promise<Array<string>> {
+    async getKeywords(requestParameters: GetMetadataRequest): Promise<Array<string>> {
         const response = await this.getKeywordsRaw(requestParameters);
         return await response.value();
     }
-
 
     /**
      * Used to list all available repositories.
