# applications/workspaces/server/workspaces/controllers/osbrepository_controller.py
@@ -36,21 +36,3 @@ def get_description(uri=None, repository_type=None, **kwargs):
         return description, 200
     except Exception as e:
         return str(e), 500
-
-
-def get_metadata(uri=None, repository_type=None, **kwargs):
-    """Get description for repository"""
-    try:
-        contexts = repository_service.get_contexts(uri, repository_type)
-        adapter = repository_service.get_repository_adapter(
-            repository_type=repository_type, uri=uri
-        )
-        retval = {}
-        for c in contexts:
-            retval[c] = {}
-            retval[c]["description"] = adapter.get_description(c)
-            retval[c]["keywords"] = adapter.get_tags(c)
-
-        return retval, 200
-    except Exception as e:
-        return str(e), 500
